REGRESSION(r286955): Fix painting text-decorations with combined text https://bugs.webkit.org/show_bug.cgi?id=234707

Reviewed by Dean Jackson.

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/css-writing-modes/text-combine-upright-decorations-001.html

* rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::createDecorationPainter):
(WebCore::TextBoxPainter::paintBackgroundDecorations):
(WebCore::TextBoxPainter::paintForegroundDecorations):

LayoutTests:

* TestExpectations:



Canonical link: https://commits.webkit.org/245623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287488 268f45cc-cd09-0410-ab3c-d52691b4dbfc